# gemini-google-search-tool

./: .gitleaks.toml  .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
gemini_google_search_tool/: __init__.py  cli.py  logging_config.py  utils.py
gemini_google_search_tool/commands/: __init__.py  query_commands.py
gemini_google_search_tool/core/: __init__.py  client.py  search.py
plugins/gemini-google-search-tool/.claude-plugin/: plugin.json
plugins/gemini-google-search-tool/commands/: completion.md  query.md
tests/: __init__.py  test_utils.py
